Add my details into the authors list

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,11 @@
             "email": "me@furkanozturk.dev",
             "homepage": "https://furkanozturk.dev",
             "role": "Developer"
+        },
+        {
+            "name": "David Majoulian",
+            "email": "david.majoulian@gmail.com",
+            "role": "Developer"
         }
     ],
     "minimum-stability": "dev",
